#pragma once

#include "actor.h"

class Object : public Actor
{
public:
	Object();
	virtual ~Object();
};